# mkdocs-mini-blog

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: auto-assign.yml  documentation.yml  release.yml
docs/: index.md
docs/nav/: getting-started.md
docs/nav/development/: development-guide.md  release-notes.md
