[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mkdocs-simple-blog"
version = "0.2.0"
description = "Mkdocs Blog Theme"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Fernando Celmer", email = "email@fernandocelmer.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mkdocs>=1.6.1",
]

[project.urls]
Homepage = "https://github.com/FernandoCelmer/mkdocs-simple-blog"
Issues = "https://github.com/FernandoCelmer/mkdocs-simple-blog/issues"
Repository = "https://github.com/FernandoCelmer/mkdocs-simple-blog"
Documentation = "https://fernandocelmer.github.io/mkdocs-simple-blog/"

[project.entry-points."mkdocs.themes"]
simple-blog = "mkdocs_simple_blog"
